--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -350,3 +350,10 @@ config LGE_DP_UNSUPPORT_NOTIFY
 	---help---
 	This config is for notification to framework unsupported
 	Displayport
+
+config LGE_DISPLAY_LABIBB_RECOVERY
+	bool "Recover labibb by reboot system"
+	default n
+	---help---
+	Recovery labibb by reboot system
+
